<resources>
    <string name="app_name">DogeSan</string>
    <string name="home_navigation">Home</string>
    <string name="search_navigation">Search</string>
    <string name="search">Search</string>
    <string name="anime_name">One piece</string>
    <string name="appname">Doge San</string>
    <string name="password">password</string>
    <string name="Email">Email</string>
    <string name="register">Register</string>
    <string name="register_buttion">Register</string>
    <string name="login_bittion">login</string>
    <string name="name">Name</string>
    <string name="remove">remove</string>
    <string name="logout">log out</string>
    <string name="my_list">My List</string>
    <string name="proflie">profile</string>
    <string name="recommended">Recommended</string>
    <string name="watchlist">Watch list</string>
    <string name="empty">Empty</string>

    <string-array name="language">
        <item>sub</item>
        <item>dub</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one_punch_man">One Punch Man</string>
</resources>