<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#212121"
    tools:context=".authfragment.LoginFragment">

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/appname"
        android:textSize="38sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/emailfield_register"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:textColor="@color/white"
        android:hint="@string/Email"
        android:textColorHint="#9E9E9E"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <EditText
        android:layout_marginTop="16dp"
        android:id="@+id/passwordfield_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="#9E9E9E"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/emailfield_register"
        app:layout_constraintStart_toStartOf="@+id/emailfield_register"
        app:layout_constraintTop_toBottomOf="@+id/emailfield_register" />

    <Button
        android:textColor="@color/white"
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_bittion"
        app:layout_constraintEnd_toEndOf="@+id/passwordfield_register"
        app:layout_constraintStart_toStartOf="@+id/passwordfield_register"
        app:layout_constraintTop_toBottomOf="@+id/passwordfield_register" />

    <TextView
        android:textColor="#83d002"
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/register_button"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

</androidx.constraintlayout.widget.ConstraintLayout>