<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".authfragment.RegisterFragment">

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/appname"
        android:textColor="@color/white"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:textColor="@color/white"
        android:id="@+id/emailfield_register"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColorHint="#9E9E9E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <EditText
        android:id="@+id/passwordfield_register"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#9E9E9E"
        app:layout_constraintEnd_toEndOf="@+id/emailfield_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailfield_register"
        app:layout_constraintTop_toBottomOf="@+id/namefield_register" />

    <Button
        android:textColor="@color/white"
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/register_buttion"
        app:layout_constraintEnd_toEndOf="@+id/passwordfield_register"
        app:layout_constraintStart_toStartOf="@+id/passwordfield_register"
        app:layout_constraintTop_toBottomOf="@+id/passwordfield_register" />

    <EditText

        android:id="@+id/namefield_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColorHint="#9E9E9E"
        app:layout_constraintEnd_toEndOf="@+id/emailfield_register"
        app:layout_constraintStart_toStartOf="@+id/emailfield_register"
        app:layout_constraintTop_toBottomOf="@+id/emailfield_register" />

    <ProgressBar
        android:id="@+id/progressBar_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>